--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@
 title: Schaduw
 email: hibbards01@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Currently a work in progress game. I am wanting to create a story based game.
+  Still working on the story aspect. I have an idea of what I want but I need to flush it
+  out more.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: hibbards01
